--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 server.port = 8080
 server.contextPath = /sismac
+
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+# Datasource        ************* Usar sismac/h2 e JDBC URL: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1 para ver o BD
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1        
+spring.datasource.username=sismac
+spring.datasource.password=sismac
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
